# SAE2.04-EXPLOBDD

./: README.md  pyproject.toml  requirements.txt
analysePython/: DbConnexion.py  colors.py  cursorContext.py  pyanalyse.ipynb  tableDefinition.py
frontend/: package-lock.json  package.json
frontend/components/: AnalyseAccueil.tsx  AnalyseGeneral.tsx  AnalyseTempsReel.tsx  AnalyseUneStation.tsx  DatePicker.tsx  EmplacementUneStation.tsx  GeneralVue.tsx  Loading.tsx  MarkerClusterGroup.tsx  SearchBarVelib.tsx  TempsReelVue.tsx  VelibMap.tsx  VelibMarkerComponent.tsx  VelibMarkerMoyenne.tsx  hueRotate.module.scss  map.module.scss  selectorCommune.tsx
frontend/lib/: datePicker.js  db.ts  formatFrenchData.ts
frontend/public/: arrondissements.geojson  arrondissements2.geojson
frontend/src/app/: globals.scss  layout.tsx  page.tsx
frontend/src/app/Map/: page.tsx
frontend/src/app/MapMoyenne/: page.tsx
frontend/src/app/api/dynamic_data/: route.ts
frontend/src/app/api/each_arrondissement/: route.ts
frontend/src/app/api/minmaxdate/: route.ts
frontend/src/app/api/remplissage_moyen/: route.ts
frontend/src/app/api/static_data/: route.ts  route.tsx
frontend/src/app/api/stats/: route.ts
frontend/src/app/api/stats_par_station/: route.ts
frontend/src/app/map/: page.tsx
frontend/styles/: charts.module.scss  header.module.scss  map.module.scss
frontend/types/: velib_data.d.ts
src/: SingletonMetaclass.py  colors.py  cursorContext.py  dbConnector.py  main.py  pyproject.toml  setup.py  tableDefinition.py  test.ipynb  utils.py
(+2 files in other folders)
